crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__empty_schema.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{}"
expression: is_valid_body(schema)
---
true
