crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__enum_arrays.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"enum\":[[1],[2]]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(_) => {
                static COMPLEX_VARIANTS: std::sync::LazyLock<Vec<serde_json::Value>> = std::sync::LazyLock::new(||
                {
                    serde_json::from_str::<Vec<serde_json::Value>>("[[1],[2]]")
                        .expect("Failed to parse complex variants")
                });
                COMPLEX_VARIANTS
                    .iter()
                    .any(|variant| jsonschema::__private::cmp::equal(variant, instance))
            }
            _ => false,
        }
