crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__enum_both_booleans.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"enum\":[true,false]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Bool(_) => true,
            _ => false,
        }
