crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__enum_false_and_string.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"enum\":[false,\"marker\"]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Bool(b) => !*b,
            serde_json::Value::String(s) => s.as_str() == "marker",
            _ => false,
        }
