crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__enum_str.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"enum\":[\"a\",\"b\",\"c\"]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => matches!(s.as_str(), "a" | "b" | "c"),
            _ => false,
        }
