crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__enum_str_with_type.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"enum\":[\"Point\",\"Feature\"],\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => matches!(s.as_str(), "Point" | "Feature"),
            _ => false,
        }
