crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__exclusive_minimum.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"exclusiveMinimum\":0,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => jsonschema::__private::numeric::gt(n, 0u64),
            _ => false,
        }
